fixed spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container
 {
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 425px;
   background-color: #FFFFFF;
   margin:20px 150px 20px 150px;
   padding: 30px;
@@ -42,7 +42,7 @@ h2
   margin: 0 auto;
   font-size: 20px;
   font-weight: bold;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
   border-bottom-style: solid;
   border-color: #CF965B;
   border-width: 2px;
